# platooning_tracking_control

./: CMakeLists.txt  package.xml
config/: FV_test.yaml  LV_test.yaml  following_control.yaml  platooning_tracking_control.yaml  test_lane_control.yaml
launch/: 2_test_control.launch  control.launch  following_control.launch  platooning_tracking_control.launch  test_lane_control.launch
